# qwertty-term

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.profraw  release-plz.toml
.jjconflict-base-0/crates/ghostty-app/: Cargo.toml
.jjconflict-side-0/: Cargo.toml  LICENSE
.jjconflict-side-0/crates/ghostty-ffi/: Cargo.toml
.jjconflict-side-0/crates/ghostty-renderer/: Cargo.toml
.jjconflict-side-0/crates/qwertty-term/: Cargo.toml
.jjconflict-side-0/crates/qwertty-term-ffi/: README.md  cbindgen.toml
.jjconflict-side-0/crates/qwertty-term-input/: Cargo.toml
.jjconflict-side-0/crates/qwertty-term-renderer/: README.md
.jjconflict-side-0/crates/qwertty-term-sprite/: README.md
.jjconflict-side-0/crates/qwertty-term-termio/: README.md
.jjconflict-side-0/crates/vt-diff/: README.md  build.rs
.jjconflict-side-0/docs/: feature-coverage.md  ghostty-gap.md  rewrite-prompt.md
.jjconflict-side-0/docs/adr/: 0001-slow-runtime-safety-default-off.md  002-termio-runtime.md  003-linux-strategy.md  006-tmux-viewer.md
.jjconflict-side-0/docs/analysis/: dcs-apc.md  doomfire-smoothness.md  font-discovery.md  font-foundations.md  font-shaping.md  formatter.md  highlight.md  page-memory.md  renderer-r3.md  renderer-r4.md  sprite.md  termio-exec.md  termio-hub.md
.jjconflict-side-0/docs/benchmarks/: doomfire.md
.jjconflict-side-0/docs/plans/: m2-termio.md
.jjconflict-side-0/docs/threads/: t7-linux.md
.jjconflict-side-0/docs/upstream/: contribution-process.md  findings-status.md  issue-1-flattened-init.md  issue-2-max-scrollback-doc.md
.jjconflict-side-0/macos-spike/: .gitignore  main.swift  module.modulemap
.jjconflict-side-0/spikes/appkit-input/: Cargo.toml
.jjconflict-side-1/crates/spike-runtime/: Cargo.toml
crates/ghostty-font/: Cargo.toml
crates/ghostty-font/src/: backend.rs  collection.rs  coretext.rs  discovery.rs  embedded.rs  grid.rs  lib.rs  resolver.rs  shaper.rs  tables.rs
crates/ghostty-font/tests/: discovery_fallback.rs  first_pixels_font_substrate.rs  nerd_constraints.rs
crates/ghostty-renderer/: Cargo.toml
crates/ghostty-renderer/src/: engine.rs  gpu.rs  lib.rs  present.rs  snapshot.rs  swap_chain.rs
crates/ghostty-renderer/tests/: bold_italic_pixels.rs  cursor_alignment.rs  cursor_scrolled_hide.rs  default_fg_ink.rs  dirty_equality.rs  ligature_pixels.rs  shaping_throughput.rs  sprite_specimen.rs
crates/ghostty-sprite/: Cargo.toml  README.md
crates/ghostty-sprite/tests/: golden_parity.rs
crates/ghostty-termio/: Cargo.toml
crates/ghostty-termio/resources/: shell-integration-manifest.txt
crates/ghostty-termio/src/: backend.rs  lib.rs  size.rs
crates/ghostty-termio/tests/: shell_integration.rs
crates/ghostty-vt/: Cargo.toml
crates/ghostty-vt/fuzz/: Cargo.toml
crates/ghostty-vt/src/: charsets.rs  color.rs  dcs.rs  lib.rs  modes.rs  page.rs  snapshot.rs  stream.rs
crates/qwertty-term/: Cargo.toml  README.md
crates/qwertty-term-ffi/: Cargo.toml
crates/qwertty-term-ffi/src/: lib.rs
crates/qwertty-term-font/: Cargo.toml  README.md
crates/qwertty-term-font/src/: atlas.rs  backend.rs  collection.rs  constraint.rs  coretext.rs  deferred.rs  descriptor.rs  discovery.rs  freetype.rs  grid.rs  lib.rs  nerd_font_constraints.rs  raster.rs  resolver.rs  shaper.rs
crates/qwertty-term-font/tests/: discovery_fallback.rs  family_specimen.rs  first_pixels_font_substrate.rs  font_manifest.rs  named_face_shaping.rs  nerd_constraints.rs
crates/qwertty-term-gtk/: Cargo.toml
crates/qwertty-term-gtk/src/: app.rs  input.rs  lib.rs  main.rs  mouse.rs  surface.rs
crates/qwertty-term-gtk/tests/: headerbar.rs  resize_smoke.rs  smoke.rs  tab_lifecycle.rs  text_smoke.rs
crates/qwertty-term-input/: Cargo.toml  README.md
crates/qwertty-term-input/src/: key.rs  key_encode.rs  kitty_keymap.rs  lib.rs  paste.rs
crates/qwertty-term-renderer/: Cargo.toml
crates/qwertty-term-renderer/src/: backend.rs  cursor.rs  engine.rs  gpu.rs  lib.rs  present.rs  present_stats.rs  row.rs  snapshot.rs  wire.rs
crates/qwertty-term-renderer/tests/: bold_italic_pixels.rs  cursor_alignment.rs  default_fg_ink.rs  dirty_equality.rs  emoji_pixels.rs  kitty_image_pixels.rs  ligature_pixels.rs  link_hover_pixels.rs  shaping_throughput.rs  software_headless.rs  sprite_specimen.rs  text_baseline.rs
crates/qwertty-term-sprite/: Cargo.toml
crates/qwertty-term-sprite/src/: common.rs  dispatch.rs  lib.rs
crates/qwertty-term-sprite/tests/: golden_parity.rs
crates/qwertty-term-termio/: Cargo.toml
crates/qwertty-term-termio/src/: exec.rs  lib.rs  mailbox.rs
crates/qwertty-term-termio/tests/: exec.rs  hub.rs  shell_integration.rs
crates/qwertty-term-vt/: Cargo.toml  README.md
crates/qwertty-term-vt/benches/: hash_map.rs
crates/qwertty-term-vt/fuzz/: .gitignore  resize.dict
crates/qwertty-term-vt/scripts/: gen_terminfo.py
crates/qwertty-term-vt/src/: charsets.rs  csi.rs  formatter.rs  lib.rs  snapshot.rs  stream.rs  tabstops.rs  terminfo.rs
crates/qwertty-term-vt/tests/: resize_interleave_property.rs  unicode_crosscheck.rs
crates/qwertty-term/src/: app.rs  clipboard.rs  config.rs  engine.rs  font.rs  font_size.rs  frame_dump.rs  import.rs  keybind.rs  lib.rs  main.rs  notify.rs  paste.rs  search_overlay.rs  searchkeys.rs  selection.rs  session.rs  smoke.rs  smoke_tmux.rs  splits.rs  splitview.rs  tabkeys.rs  tmux_reconcile.rs  tmux_session.rs  tmux_viewer.rs  view.rs
crates/qwertty-term/tests/: bell_smoke.rs  cli_overrides.rs  keybind_smoke.rs  mouse2_smoke.rs  mouseshift_smoke.rs  notify_smoke.rs  progress_smoke.rs  resize_smoke.rs  session_smoke.rs  splits_smoke.rs  tmux_lifecycle_smoke.rs  tmux_real.rs  tmux_smoke.rs  typing_smoke.rs  windowstate_smoke.rs  wordchars_smoke.rs
crates/spike/: Cargo.toml
crates/spike/src/: cell.rs  color.rs  config.rs  engine.rs  lib.rs  main.rs  mode.rs  osc.rs  parser.rs  style.rs
crates/spike/tests/: engine_pty.rs  replay_fixtures.rs
crates/vt-diff/: Cargo.toml  README.md  build.rs
crates/vt-diff/examples/: profile_streams.rs
examples/frame-capture/: Cargo.toml  README.md
(+927 files in other folders)
