[workspace]
resolver = "3"
members = ["crates/*", "examples/*", "xtask"]
default-members = ["crates/*"]
# cargo-fuzz target is its own workspace (needs nightly); keep it out so
# `cargo check --workspace` stays green on stable.
exclude = ["crates/qwertty-term-vt/fuzz"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/qwertty-term"
