[package]
name = "ghostty-font"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Font table parsing, cell-metrics derivation, and texture atlas allocation for ghostty-rs. Standalone port of Ghostty's src/font/ opentype layer, Metrics.zig, and Atlas.zig."
publish = false

[lib]
name = "ghostty_font"

[dependencies]
ttf-parser = "0.25"
# Pure-Rust HarfBuzz shaping port (decision 1: rustybuzz-first). 0.20 pins
# ttf-parser 0.25 transitively, matching our own ttf-parser, so a rustybuzz
# `Face` and a ttf-parser `Face` read the same font bytes without a version
# skew.
rustybuzz = "0.20"
# Unicode `Emoji_Presentation` property data. The resolver derives a bare
# codepoint's default presentation (text vs emoji) from this, the direct analog
# of upstream's `uucode.get(.is_emoji_presentation, cp)`
# (CodepointResolver.zig:152-157). `char::emoji_status()` returns an
# `EmojiStatus`; the `EmojiPresentation*` variants are the UCD property.
unicode-properties = { version = "0.1", default-features = false, features = [
    "emoji",
] }
# Procedural sprite-glyph rasterizer (box drawing, block elements, etc.). The
# reduced resolver dispatches sprite codepoints to this crate.
ghostty-sprite = { path = "../ghostty-sprite" }

# CoreText/CoreGraphics face loading + rasterization (macOS only). We use the
# objc2 framework-binding family (objc2 0.6, objc2-* 0.3) rather than the older
# core-text/core-graphics crates, to match the rest of M3's macOS surface
# (the renderer chunk pins objc2-metal/objc2-quartz-core per the plan) and
# because these are the actively maintained, framework-complete bindings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "CFBase",
    "CFData",
    "CFString",
    "CFCGTypes",
    # Discovery (F5-full) builds search descriptors and reads back matching
    # descriptor arrays: attribute dictionaries, a codepoint character set, a
    # numeric size/traits value, and the CTFontCollection result array.
    "CFArray",
    "CFDictionary",
    "CFCharacterSet",
    "CFNumber",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "std",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "CGImage",
] }
objc2-core-text = { version = "0.3", default-features = false, features = [
    "std",
    "CTFont",
    "CTFontCollection",
    "CTFontDescriptor",
    "CTFontManager",
    "CTFontTraits",
    "objc2-core-graphics",
] }

[dev-dependencies]
# The integration test asserts sprite codepoints route to ghostty-sprite; it
# calls `ghostty_sprite::has_codepoint` directly from the test crate.
ghostty-sprite = { path = "../ghostty-sprite" }
