[package]
name = "ghostty-termio"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal IO foundations ported from Ghostty: PTY primitive plus termio message/mailbox/backend plumbing"
publish = false

# M2 chunks A+B (docs/plans/m2-termio.md). Analysis:
# docs/analysis/termio-foundations.md. The mailbox implements the binding
# API contract from docs/adr/002-termio-runtime.md.

[dependencies]
# The terminal core: Message carries terminal::ScrollViewport 1:1 with
# upstream (termio/message.zig imports terminal.Terminal.ScrollViewport).
ghostty-vt = { path = "../ghostty-vt" }

# PTY + termios syscalls (plan decision 1: rustix, not portable-pty — we
# need IUTF8, termios polling, and exact TIOCSWINSZ semantics).
rustix = { version = "1", features = ["fs", "process", "pty", "stdio", "termios"] }

# Only for what rustix deliberately does not wrap: sigaction (the fork-child
# signal reset in pty::child), fork/exec/waitpid in the real-shell test, and
# close-by-raw-fd in the fork child.
libc = "0.2"
