[package]
name = "ghostty-vt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal emulation core ported from Ghostty: VT parser, terminal state machine, page-based scrollback"
publish = false

[dependencies]
base64 = "0.22"

[dev-dependencies]
# Codec backends for the kitty graphics image tests only — the kitty model keeps codecs
# behind the `ImageDecoder` seam so the crate itself stays codec-free.
flate2 = "1"
png = "0.17"
unicode-segmentation = "1"
unicode-width = "0.2"
# Differential oracle only. Where semantics overlap, ghostty-vt is compared
# against vte; documented divergences (see tests/parser_vte_differential.rs)
# are intentional and not forced to parity.
vte = "0.15"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "parser"
harness = false
