[package]
name = "qwertty-term-font"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Font table parsing, cell-metrics derivation, and texture atlas allocation for qwertty-term. Standalone port of Ghostty's src/font/ opentype layer, Metrics.zig, and Atlas.zig."

# The CoreText face/collection/discovery layer (Face, Collection,
# CodepointResolver's backing) is `cfg(target_os = "macos")`. docs.rs defaults
# to a Linux target, which would omit those modules; build the docs for a darwin
# target so the full API is shown. `freetype` is enabled so the optional
# FreeType face path (ADR 003) is documented alongside the CoreText one.
[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
features = ["freetype"]

[lib]
name = "qwertty_term_font"

[features]
# FreeType glyph rasterization (the non-CoreText face path; ADR 003 P1/P2). Off
# by default; the Linux/software render path enables it. FreeType is
# cross-platform, so this can also be enabled on macOS to test the FreeType face
# against the CoreText one. Pulls in the C FreeType library (bundled build).
freetype = ["dep:freetype-rs"]
# Fontconfig system-font discovery (the non-CoreText discovery path; ADR 003
# P2). Implies `freetype` because discovery must materialize a `Face`, and the
# non-CoreText `Face` is the FreeType one. Off by default; the Linux render path
# enables it. Uses the `fontconfig` crate's `dlopen` mode, so libfontconfig is
# loaded at *runtime* — there is no link-time system dependency and `cargo
# check`/`clippy` compile on any host (cross-target too). Only *running*
# discovery needs libfontconfig present (every desktop Linux + the ubuntu CI
# runner has it). FreeType is cross-platform, so `--features fontconfig` also
# builds/tests the Linux discovery stack on macOS.
fontconfig = ["dep:fontconfig", "freetype"]

[dependencies]
ttf-parser = "0.25"
# FreeType face loading + glyph rasterization for the non-CoreText path (Linux;
# ADR 003 P2). Optional + feature-gated (see `[features]`). `freetype-rs` wraps
# the C FreeType library; we use its bundled build so no system FreeType is
# required.
freetype-rs = { version = "0.36", optional = true }
# Fontconfig system-font discovery for the non-CoreText path (Linux; ADR 003
# P2). Optional + feature-gated (see `[features]`). `dlopen` loads libfontconfig
# at runtime, so no link-time dep / no pkg-config at build time.
fontconfig = { version = "0.11", optional = true, default-features = false, features = [
    "dlopen",
] }
# Pure-Rust HarfBuzz shaping port (decision 1: rustybuzz-first). 0.20 pins
# ttf-parser 0.25 transitively, matching our own ttf-parser, so a rustybuzz
# `Face` and a ttf-parser `Face` read the same font bytes without a version
# skew.
rustybuzz = "0.20"
# Unicode `Emoji_Presentation` property data. The resolver derives a bare
# codepoint's default presentation (text vs emoji) from this, the direct analog
# of upstream's `uucode.get(.is_emoji_presentation, cp)`
# (CodepointResolver.zig:152-157). `char::emoji_status()` returns an
# `EmojiStatus`; the `EmojiPresentation*` variants are the UCD property.
unicode-properties = { version = "0.1", default-features = false, features = [
    "emoji",
] }
# Procedural sprite-glyph rasterizer (box drawing, block elements, etc.). The
# reduced resolver dispatches sprite codepoints to this crate.
qwertty-term-sprite = { version = "0.3.0", path = "../qwertty-term-sprite" }

# CoreText/CoreGraphics face loading + rasterization (macOS only). We use the
# objc2 framework-binding family (objc2 0.6, objc2-* 0.3) rather than the older
# core-text/core-graphics crates, to match the rest of M3's macOS surface
# (the renderer chunk pins objc2-metal/objc2-quartz-core per the plan) and
# because these are the actively maintained, framework-complete bindings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "CFBase",
    "CFData",
    "CFString",
    "CFCGTypes",
    # Discovery (F5-full) builds search descriptors and reads back matching
    # descriptor arrays: attribute dictionaries, a codepoint character set, a
    # numeric size/traits value, and the CTFontCollection result array.
    "CFArray",
    "CFDictionary",
    "CFCharacterSet",
    "CFNumber",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "std",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "CGImage",
] }
objc2-core-text = { version = "0.3", default-features = false, features = [
    "std",
    "CTFont",
    "CTFontCollection",
    "CTFontDescriptor",
    "CTFontManager",
    "CTFontTraits",
    "objc2-core-graphics",
] }

[dev-dependencies]
# The integration test asserts sprite codepoints route to qwertty-term-sprite; it
# calls `qwertty_term_sprite::has_codepoint` directly from the test crate.
qwertty-term-sprite = { version = "0.3.0", path = "../qwertty-term-sprite" }
