[package]
name = "qwertty-term-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GTK4 + libadwaita host for the qwertty-term terminal (Linux windowed app, ADR 005 P4 slice 2): an adw::Application/ApplicationWindow with a GtkGLArea GL surface"
default-run = "qwertty-term-gtk"

# Linux-only crate. On non-Linux targets the lib compiles to an empty shell and
# the bin is a stub (no GTK deps present), so `cargo build --workspace` on macOS
# skips all of the GTK stack and the macOS app crate stays green. All real
# content is behind `#[cfg(target_os = "linux")]` and every GTK dependency is in
# a `[target.'cfg(target_os = "linux")']` block.
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "qwertty_term_gtk"
path = "src/lib.rs"

[[bin]]
name = "qwertty-term-gtk"
path = "src/main.rs"

# All GTK/GL deps are Linux-gated so the workspace still resolves and builds on
# macOS (the deps are simply absent there). Versions per ADR 005 / the GTK plan;
# `glow` and `libloading` already ride in the workspace lockfile via the
# renderer's OpenGL backend (slice 1), so only `gtk4`/`libadwaita`/`epoxy` are
# newly fetched. libadwaita stays featureless at the 1.0 baseline (Debian
# bookworm ships 1.2) — no `AdwToolbarView`/`AdwAboutWindow`.
#
# `v4_6` (GTK 4.6, 2022) is required only for the `gdk::GLAPI` type, which
# `app.rs` uses to pin the GLArea to desktop GL as upstream does (`allowed-apis:
# gl`, ui/1.2/surface.blp:36). The build floor stays 4.6 — well under every
# distro we target (Ubuntu 22.04 = 4.6, Debian bookworm = 4.8) — because that
# property is set dynamically: `GtkGLArea:allowed-apis` is GTK 4.12+, so `app.rs`
# assigns it only when present rather than take a 4.12 floor (which is what
# gtk4-rs's typed `set_allowed_apis` would cost) and drop bookworm.
#
# This replaces an earlier `GLArea::set_required_version(4, 3)`, which was
# baseline but made a too-old driver fail opaquely inside GTK; the version gate
# now lives in `app.rs`'s realize handler, mirroring upstream (OpenGL.zig:141-148).
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_6"] }
adw = { package = "libadwaita", version = "0.7" }
glow = "0.17"
epoxy = "0.1"
libloading = "0.8"
# The platform-free half of the macOS app: the terminal `Engine` wrapper (vt
# `Terminal` + selection API), the selection-gesture state machine, the CPU-side
# selection tint (`selection::tint_selection`), the paste-safety classifier, and
# the context-menu model. All of these modules are un-gated (not `cfg(macos)`)
# and depend only on the vt/input crates, so they compile + run on Linux; the
# GTK host wires GTK events to this shared logic rather than reinventing it.
# `[target.linux]` keeps macOS builds from pulling it (they use it directly).
qwertty-term = { version = "0.4.0", path = "../qwertty-term" }
# The platform-free core: the vt terminal, the font grid, and the renderer
# engine + its Linux OpenGL backend. `cargo check -p qwertty-term` is clean on
# Linux, so these modules reuse cleanly here. Path+version so this crate stays
# in lockstep with the workspace release (release-plz bumps all three together).
qwertty-term-vt = { version = "0.4.0", path = "../qwertty-term-vt" }
qwertty-term-font = { version = "0.4.0", path = "../qwertty-term-font" }
qwertty-term-renderer = { version = "0.4.0", path = "../qwertty-term-renderer" }
# The platform-free key-input model: GDK key events are translated into
# `KeyEvent`s and encoded to pty bytes via `key_encode::encode` (the same
# encoder the macOS app uses). Reused verbatim — no new logic added there.
qwertty-term-input = { version = "0.4.0", path = "../qwertty-term-input" }
# The POSIX pty/subprocess for the interactive shell (SURFACE INIT). The
# headless text smoke drives the vt Terminal directly, so this is only exercised
# by an interactive launch (`run`), not by validation.
qwertty-term-termio = { version = "0.4.0", path = "../qwertty-term-termio" }
