[package]
name = "qwertty-term-input"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Input encoding primitives ported from Ghostty: key/mouse/paste event -> PTY byte encoders"
publish = false

[lib]
name = "qwertty_term_input"

[dependencies]

[dev-dependencies]
