[package]
name = "qwertty-term-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Renderer core ported from Ghostty: geometry, cursor style resolution, row heuristics, and the RenderSnapshot contract between qwertty-term-vt and any renderer backend"

# The engine/Metal backend (Engine, render, Frame — the whole GPU path) is
# `cfg(target_os = "macos")`. docs.rs defaults to a Linux target, which would
# render a gutted crate with those modules missing; build the docs for a darwin
# target so the full public API is documented.
[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

[lib]
name = "qwertty_term_renderer"

[dependencies]
qwertty-term-vt = { version = "0.2.0", path = "../qwertty-term-vt" }
# Sprite dispatch (cursors / decorations / box-drawing) is platform-agnostic
# (pure Rust), so the cell engine can use it on every target — including the
# headless Linux software-render path (ADR 003).
qwertty-term-sprite = { version = "0.2.0", path = "../qwertty-term-sprite" }
# Regex URL detection for R7 clickable links (src/link.rs).
regex = "1"

# Metal backend (chunk R1). All versions already present in the workspace
# lockfile (transitively via eframe/winit), so these add no new lock entries.
# objc2-io-surface is chosen over the servo `io-surface` crate because its
# `IOSurfaceRef` is the exact parameter type of objc2-metal's
# `newTextureWithDescriptor:iosurface:plane:` binding — zero conversion glue —
# and it shares the objc2 memory-management model (`CFRetained`).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
# `objc2-io-surface` feature enables `newTextureWithDescriptor:iosurface:plane:`
# (IOSurface-backed render targets, Target.zig); it's opt-in, not in the
# default feature set. objc2-metal's default feature set already includes the
# render-pipeline/pass/encoder/library types (Frame/RenderPass/Pipeline, R2)
# and `block2` (the `addCompletedHandler:` completion block).
objc2-metal = { version = "0.3.2", features = ["objc2-io-surface"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSRange",
    # NSNull: returned from the IOSurfaceLayer `actionForKey:` override to
    # disable implicit CALayer animations (IOSurfaceLayer.zig).
    "NSNull",
    # NSString: shader-function/library names passed to Metal (Pipeline.zig)
    # and R3's runtime shader-compile smoke test.
    "NSString",
] }
objc2-io-surface = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
# CALayer (presentation target) + CATransaction (disable implicit animations),
# plus the `kCAGravityTopLeft` contents-gravity constant, for IOSurfaceLayer.
objc2-quartz-core = { version = "0.3.2", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "CALayer",
    "CATransaction",
] }
# block2: the completion handler passed to `addCompletedHandler:` (Frame.zig)
# and the surface-assignment closure dispatched to the main thread
# (IOSurfaceLayer.zig).
block2 = "0.6.2"
# dispatch2: `DispatchQueue::main().exec_async(...)` for main-thread `contents`
# assignment (IOSurfaceLayer.setSurface).
dispatch2 = { version = "0.3.1", default-features = false, features = [
    "std",
    "objc2",
] }
# The font substrate the cell engine (R4) drives: shaping + glyph→atlas render
# cache (`Grid`). On macOS the default (CoreText) face backend is used.
qwertty-term-font = { version = "0.2.0", path = "../qwertty-term-font" }

# On non-macOS targets the cell engine renders headless over the Software
# backend (ADR 003 P1), so it needs the FreeType face backend — enable the
# font crate's `freetype` feature by default there. This is what makes
# `Engine<Software>` build and render on Linux CI with no CoreText / no GPU.
[target.'cfg(not(target_os = "macos"))'.dependencies]
qwertty-term-font = { version = "0.2.0", path = "../qwertty-term-font", features = [
    "freetype",
] }

[dev-dependencies]
# The acceptance test (R4) drives a real qwertty-term-vt Terminal through a Stream to
# produce the snapshot the engine renders.
qwertty-term-vt = { version = "0.2.0", path = "../qwertty-term-vt" }
# Base64-encodes kitty graphics APC payloads for the image-rendering test (R6).
base64 = "0.22"
